# miniforge

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  kimi_test.py  miniforge_colab.ipynb  pyproject.toml  pytest.ini  reap_infer.py  run_mesh.py  run_mesh_benchmark.py  run_mesh_simple.py  start.sh  test.py
.claude/: settings.local.json
.cursor/hooks/state/: continual-learning.json
benchmarks/: benchmark_suite.py  runner.py  visualization.py
benchmarks/context/: retrieval.py
benchmarks/memory/: usage.py
benchmarks/performance/: throughput.py
benchmarks/quality/: evaluation.py
configs/: AGENTS.md  m7-optimized.yaml
docs/diagrams/: architecture-overview.md  backend-inference-flow.md  config-memory-management.md  model-loading-flow.md
examples/: AGENTS.md  basic_chat.py  server_api.py  streaming_chat.py  tool_agent.py  vision_chat.py
monitoring/grafana/dashboards/: miniforge.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
paper/: README.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  paper.md
paper/references/: bibliography.bib
paper/sections/: abstract.tex  analysis.tex  appendix_a.tex  appendix_b.tex  appendix_c.tex  architecture.tex  backends.tex  background.tex  benchmarks.tex  conclusion.tex  experimental.tex  future_work.tex  hardware.tex  implementation.tex  introduction.tex  kv_cache.tex  memory.tex  quantization.tex  related_work.tex  results.tex
src/: AGENTS.md
src/miniforge/: __init__.py  cli.py
src/miniforge/core/: __init__.py  engine.py  memory.py
src/miniforge/core/backends/: __init__.py  llama_cpp.py  transformers.py
src/miniforge/generation/: __init__.py  streaming.py  tools.py
src/miniforge/mesh/: __init__.py  cli.py  coordinator.py  dashboard.py  discovery.py  engine.py  host_worker.py  registry.py  security.py  transport.py
src/miniforge/mesh/static/: app.js  fallback.html  index.html  style.css
src/miniforge/mesh/templates/: index.html
src/miniforge/models/: __init__.py  gguf_convert.py  minimax.py  registry.py
src/miniforge/multimodal/: __init__.py  vision.py
src/miniforge/utils/: __init__.py  config.py  download.py  hardware.py  monitoring.py
src/miniforge/webui/: __init__.py  server.py
src/miniforge/webui/static/: app.js  index.html  styles.css
tests/: AGENTS.md  test_core.py  test_hardware.py  test_local_model_speed.py  test_model_hosting.py  test_tools.py  test_webui.py
